--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.0",
+    "reactn": "^0.1.0",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
